Feature/datafusion (#20134)
* No-op load writer files implementation

* Implemented flush conditions and improved engine failure handling

---------

Co-authored-by: Shashank Gowri <shnkgo@amazon.com>